--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-Flask==2.3.2
-gunicorn==20.1.0
-pandas==2.2.1
-python-docx==1.1.0
+Flask==2.3.3
+pandas==2.0.3
+numpy==1.24.3
+python-docx==0.8.11
+openpyxl==3.1.2
+xlrd==2.0.1
+werkzeug==2.3.7
